Fix sidebar on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -101,6 +101,15 @@ body {
   padding: 0 1.5rem;
 }
 
+/* Small devices navbar*/
+@media (max-width: 996px) {
+  .navbar {
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+    background-color: var(--ifm-navbar-background-color);
+  }
+}
+
 .navbar__brand { font-weight: 700; letter-spacing: -0.01em; }
 
 .navbar__link {
